# kls_drive

./: .env  .gitignore  Cargo.toml
backend/: .env  Cargo.toml
backend/entity/: Cargo.toml
backend/entity/src/: document.rs  mod.rs  user.rs
backend/migration/src/: lib.rs  m20250304_131008_create_user_table.rs  m20250304_131553_create_document_table.rs
backend/src/: app.rs  cron.rs  jwt.rs  main.rs  state.rs
backend/src/config/: app.rs  cors.rs  database.rs  email.rs  jwt.rs  mod.rs  redis.rs
backend/src/connections/: database.rs  email.rs  redis.rs
backend/src/handlers/: user.rs
backend/src/middleware/: cors.rs
backend/src/routes/: document.rs  mod.rs  user.rs
backend/src/services/: email.rs  redis.rs
entity/src/: document.rs  prelude.rs
frontend/: Cargo.toml
frontend/.cargo/: config.toml
frontend/assets/styling/: create_account.css  logged_out_navbar.css  main.css
frontend/assets/styling/components/: loading.css  message_with_button_link.css
frontend/assets/styling/views/: activate_account.css  create_account.css  home.css  login.css
frontend/src/: main.rs  routes.rs
frontend/src/components/: documentSubmit.rs  loading.rs  loggedInNavbar.rs  loggedOutNavbar.rs  messageWithButtonLink.rs  mod.rs
frontend/src/services/: auth.rs
frontend/src/views/: activateAccount.rs  createAccount.rs  home.rs  login.rs  mod.rs  notFound.rs
src/: jwt.rs  main.rs  state.rs
src/config/: app.rs
src/connections/: email.rs  mod.rs
src/handlers/: document.rs  user.rs
src/middleware/: cors.rs
src/routes/: document.rs
src/services/: email.rs  redis.rs
