[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = [
    "entity",
    "migration"
]

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["multipart"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
bb8 = "0.9.0"
bb8-redis = "0.21.0"
chrono = "0.4.40"
dotenvy = "0.15.7"
entity = { path = "entity" }
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.14", features = ["tokio1", "tokio1-native-tls"] }
migration = { path = "migration" }
sea-orm = { version = "1.1.7", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["sync", "macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.13.0"
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.15.1", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
