[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "migration"
]

[dependencies]
axum = "0.8.1"
dotenvy = "0.15.7"
tokio = { version = "1.43.0", features = ["sync", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
migration = { path = "migration" }
sea-orm = { version = "1.1.7", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
