[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "entity",
    "migration"
]

[dependencies]
argon2 = "0.5.3"
axum = "0.8.1"
bb8 = "0.9.0"
bb8-redis = "0.21.0"
dotenvy = "0.15.7"
entity = { path = "entity" }
lettre = { version = "0.11.14", features = ["tokio1", "tokio1-native-tls"] }
migration = { path = "migration" }
sea-orm = { version = "1.1.7", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["sync", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.15.1", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
